# SuperAI

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  QUICK_REFERENCE.md  README.md  SUPERAI_FINAL_SUMMARY.md  TASKBOARD.md  _b.json  codes.md  implementation_plan_detailed.md  implementation_plan_v2.md  index.html  pyproject.toml
.github/workflows/: backup.yml  ci.yml  pages.yml  release.yml
clients/: README.md
clients/python/: superai_memory_client.py
clients/typescript/: superaiMemoryClient.ts
config/: constitution.md  models.json  rules.md  strengths.md
docs/: AGY_HANDOFF_PENDING_AND_INCOMPLETE.md  AGY_IMPROVEMENT_PLAN.md  AUTO_TEST_RUNNER.md  CANCEL.md  CHECKPOINT_PROTOCOL.md  CI_FIXER.md  CLI_HELP_AND_COMPLETION.md  COGNIFY.md  COMMAND_BUDGET.md  COST_ACCOUNTING.md  DAEMON_DEPLOY.md  DATASETS.md  DEP_UPGRADE.md  DOC_GAP_ANALYSIS.md  EXIT_CODES.md  EXTERNAL_CLI_GAPS.md  FEATURE_BACKLOG.md  FOUNDATION_SAFETY.md  GIT_HELPERS.md  GOALS_DAEMON.md  GROK_HANDOFF_PENDING_AND_INCOMPLETE.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_V2_PLAN.md  IMPROVEMENT_V3_PLAN.md  IMPROVEMENT_V4_PLAN.md  IMPROVEMENT_V5_PLAN.md  IMPROVEMENT_V6_BACKLOG.md  INGEST.md  KNOWLEDGE_GRAPH.md  LEARNING_ENGINE_GAPS.md  LEARNING_LIFECYCLE.md  LICENSE_COMPLIANCE.md  LINT_TYPECHECK.md  LOG_TRIAGE.md  MEMORY_EVAL.md  MEMORY_PALACE_GAPS.md  MEMORY_ROADMAP_COGNEE_GAPS.md  MERGE_CONFLICT_HELPER.md  MOSCOW_100_PLAN.md  NL_PREVIEW.md  (+39 more)
docs/checkpoints/: CHECKPOINT_20260713_232905_track-F-complete.md  CHECKPOINT_20260713_233058_G1-G3-partial-G4.md  CHECKPOINT_20260713_235428_G-H-I-foundations.md  CHECKPOINT_20260714_002253_track-J-other-tools.md  CHECKPOINT_20260714_003133_databao-adapter.md  CHECKPOINT_20260714_003559_pref-web-tt-hierarchy.md  CHECKPOINT_20260714_004209_msg-vega-plugin-bandit.md  CHECKPOINT_20260714_005204_final-polish-no-smoke.md  CHECKPOINT_20260714_010948_future-plan-gap-close.md  CHECKPOINT_20260714_011605_depth-finish-thin-layers.md  CHECKPOINT_20260714_013102_restructure-src-cli-core.md  CHECKPOINT_20260714_013821_security-review-and-hardening.md  CHECKPOINT_20260714_015359_msn-backlog-implemented.md  CHECKPOINT_20260714_015840_backlog-complete-n2-n5-n13-n15.md  CHECKPOINT_20260714_020933_wave2-m9-n30-complete.md  CHECKPOINT_20260714_021722_multi-cli-parallel-dashboard.md  CHECKPOINT_20260714_022248_multi-terminal-parallel-dashboard.md  CHECKPOINT_20260714_023349_host-tools-checklist-autoinstall.md  CHECKPOINT_20260714_024316_central-memory-palace-all-ais.md  CHECKPOINT_20260714_024954_local-mcp-server-central-memory.md  CHECKPOINT_20260715_001616_orchestrator-mid-task-adaptation.md  CHECKPOINT_20260715_010027_hitl-replan-critic-with-clis.md  (+11 more)
multi_llm_orchestrator/: .gitignore  LICENSE  README.md  SUPERAI_FINAL_SUMMARY.md
packaging/: pre-commit-hook.sh
scripts/: bootstrap.ps1  bootstrap.sh  checkpoint.ps1  gen_v1_v5_scorecard.py  gen_v1_v6_unified_improved_scorecard.py  gen_v1_v6_unified_scorecard.py  gen_v6_scorecard.py  run_tests_report.py
tests/: test_ask_session.py  test_auto_test_runner_s105.py  test_board_cache.py  test_cancel_m017.py  test_central_memory.py  test_ci_fixer_s109.py  test_cli_help_and_completion_m081_m082.py  test_cli_models.py  test_cli_pool.py  test_cognify_p2.py  test_command_budget_s132.py  test_config.py  test_cost_accounting_m002.py  test_council.py  test_daemon_deploy_n206.py  test_databao_adapter.py  test_dep_upgrade_s112.py  test_depth_finish.py  test_embeddings_evolution.py  test_exit_codes_m080.py  test_external_cli_integration.py  test_foundation_complete_must.py  test_foundation_lift.py  test_foundation_safety_m001_m008_m018.py  test_g13_g14_g15.py  test_gap_features.py  test_git_helpers_s116.py  test_goals_daemon_n206.py  test_grok_handoff_gaps.py  test_h_i.py  test_hierarchy.py  test_history.py  test_host_tools.py  test_improvement_v3.py  test_improvement_v4.py  test_improvement_v5.py  test_improvement_v6.py  test_ingest_p5.py  test_install_wizard.py  test_knowledge_graph_p1.py  (+65 more)
(+296 files in other folders)
