[project]
name = "superai"
version = "0.1.0"
description = "SuperAI - Intelligent Multi-Model AI Orchestration Platform"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "chromadb>=0.5.0",
    "cryptography>=42.0",
    "zstandard>=0.22",
]

[project.optional-dependencies]
providers = [
    "openai>=1.0",
    "anthropic>=0.30",
    "google-generativeai>=0.7",
    "requests>=2.31",
]
embeddings = [
    "sentence-transformers>=3.0",
]
data = [
    "sqlalchemy>=2.0",
    "databao-agent>=0.1",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
vector = [
    "faiss-cpu>=1.7",
]
dev = [
    "pytest>=8.0",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
]

[project.scripts]
superai = "scli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "scli"]

[tool.setuptools.package-dir]
"core" = "src/core"
"scli" = "src/cli"

[tool.setuptools.package-data]
scli = ["static/pwa/*"]
