[project]
name = "superai"
version = "0.1.0"
description = "SuperAI - Intelligent Multi-Model AI Orchestration Platform"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "pgvector>=0.3",
    "psycopg[binary]>=3.1",
    "cryptography>=42.0",
    "zstandard>=0.22",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
providers = [
    "openai>=1.0",
    "anthropic>=0.30",
    "google-generativeai>=0.7",
    "requests>=2.31",
]
embeddings = [
    "sentence-transformers>=3.0",
]
data = [
    "databao-agent>=0.1",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
vector = [
    "faiss-cpu>=1.7",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
docs = [
    "pypdf>=4.0",
]
ingest = [
    "pypdf>=4.0",
]

[tool.pytest.ini_options]
markers = [
    "unit: fast offline unit tests (no multi-cli boards)",
    "integration: slower multi-cli / orchestrator tests",
]
testpaths = ["tests"]

[project.scripts]
superai = "scli.main:main"
# Host CLIs (git, gh, aws, claude, …) are NOT Python deps — use:
#   superai host-tools check|install
#   scripts/bootstrap.ps1 | scripts/bootstrap.sh
# Optional post-install: SUPERAI_AUTO_HOST_TOOLS=1 (dry-run) or =install

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "core.superai_agent", "scli"]

[tool.setuptools.package-dir]
"core" = "src/core"
"core.superai_agent" = "src/core/superai_agent"
"scli" = "src/cli"

[tool.setuptools.package-data]
scli = ["static/pwa/*"]
core = ["data/*"]
